# childes-ud

./: LICENSE  README.md  pyproject.toml  roadmap.md
chatconllu/: Makefile  chatparser.py  clean_utterance.py  cli.py  conlluparser.py  features.py  logger.py  mkdocs.yml  read_childes.py  setup.py
chatconllu/docs/: chatparser.md  data structure.md  data-structure.md  dependency relations.md  dependency-relations.md  features.md  index.md  part-of-speech tags.md  part-of-speech-tags.md  roadmap.md
chatconllu/helpers/: chat.py  clean_utterance.py  sentence.py  token.py  utils.py
chatconllu/tests/: 07.cha  test_chatparser.py
thesis/ba-thesis/: Makefile  PSIThesis.cls  literature.bib  main.tex
thesis/ba-thesis/appendices/: appendixA.tex
thesis/ba-thesis/chapters/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex  chapter7.tex  chapter8.tex
thesis/ba-thesis/misc/: setup.tex  titlepage.tex
