[tool.poetry]
name = "childes-ud"
version = "0.1.0"
description = "Conversion scripts between CHILDES CHAT format and UD CoNLL-U format."
authors = ["Jingwen Li"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mkdocs = "^1.1.2"
pytest = "^6.2.4"
mkdocs-material = "^7.1.6"
rich = "^10.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
